[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Enemies/FinalBoss/FinallBossEnemy.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Stats/Health.gd" type="Script" id=3]
[ext_resource path="res://Nodes/State/StateManger.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Enemies/BossEnemieDrop.gd" type="Script" id=5]
[ext_resource path="res://Sprite/Enemies/Skelleton/SkelletonIdle.tres" type="SpriteFrames" id=6]

[sub_resource type="CapsuleShape2D" id=1]

[node name="FinallBoss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0 )
position = Vector2( 3.55271e-15, 18.7 )
scale = Vector2( 0.40625, 0.13125 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.921569, 1, 0, 1 )
scale = Vector2( 0.46875, 0.72 )
frames = ExtResource( 6 )
animation = "JumpFinished"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 0.1
neighbor_dist = 100.0
time_horizon = 0.1

[node name="AttackTick" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="States" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Stats" type="Node" parent="."]

[node name="Health" type="Node" parent="Stats"]
script = ExtResource( 3 )

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Drops" type="Node" parent="."]
unique_name_in_owner = true

[node name="BossEnemieDrop" type="Node" parent="Drops"]
script = ExtResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="OnAnimationFinished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="KnockBackTimer" to="." method="OnKockBackTimerTimeout"]
